# marine-fault-diagnosis-front

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri-desktop-guide.md  vite.config.js
public/js/: timer.js
public/kgshow/: GraphExplorer.html  GraphFinder.html  GraphNavigator.html  knowledges.json
public/kgshow/lib/interactive-graph-0.1.0/: interactive-graph.min.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: KnowUsage.md  main.css
src/components/: AsideMenu.vue  Dialog.vue  Header.vue  Main.vue
src/components/ui/: UiCheckbox.vue  UiSelect.vue
src/components/views/: AskAnswer.vue  HomePage.vue  Kg.vue  Knowledge.vue  Settings.vue  Settings2.vue
src/components/views/KgShow/: KgExplorer.vue  KgFinder.vue  KgNavigator.vue
src/components/views/Knowledge/: Library.vue  LibraryForm.vue  LibraryInter.vue  LibraryManage.vue  Usage.vue
src/utils/: F.js  GLO.js  Markdown.vue  Settings.js  api.js  eventBus.js  knowledge.js  router.js  tauriGraphLayout.js
