[package]
name = "sigmaflow-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the SigmaFlow Vue app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
